# Health-Insurance-Cost-Prediction

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  predict.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  data_loader.py  diagnostics.py  eda.py  model.py  persistence.py  preprocessing.py
tests/: conftest.py  test_data_loader.py  test_diagnostics.py  test_eda.py  test_model.py  test_persistence.py  test_preprocessing.py
