[project]
name = "health-insurance-cost-prediction"
version = "0.1.0"
description = "Predicting medical insurance costs using patient demographics and health indicators"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "joblib>=1.1.0",
    "statsmodels>=0.13.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
